--- a/composer.json
+++ b/composer.json
@@ -46,8 +46,8 @@
             "./vendor/bin/psalm --clear-cache"
         ],
         "sa": [
-            "./vendor/bin/phpstan analyse -c phpstan.neon",
-            "./vendor/bin/psalm --show-info=true"
+          "./vendor/bin/psalm --show-info=true",
+          "./vendor/bin/phpstan analyse -c phpstan.neon"
         ],
         "tests": [
             "@cs",
