--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,7 @@
             ]
         },
         "classmap": [
-          "vendor/yiisoft/yii/framework/web",
-          "vendor/yiisoft/yii/framework/base",
-          "vendor/yiisoft/yii/framework/collections/CMap.php",
-          "vendor/yiisoft/yii/framework/i18n/CLocale.php",
-          "vendor/yiisoft/yii/framework/i18n/CMessageSource.php",
-          "vendor/yiisoft/yii/framework/vendors/htmlpurifier/HTMLPurifier.standalone.php"
+          "vendor/yiisoft/yii/framework/web/CUrlManager.php"
         ]
     },
     "scripts": {
