--- a/vendor-bin/tools/composer.json
+++ b/vendor-bin/tools/composer.json
@@ -7,5 +7,10 @@
         "psalm/plugin-phpunit": "^0.16.1",
         "squizlabs/php_codesniffer": "^3.6",
         "vimeo/psalm": "^4.15"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
