--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,11 +14,13 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - '7.4'
           - '8.0'
-        dependencies:
-          - lowest
-          - highest
+          - '8.1'
+          - '8.2'
+        include:
+          - php-version: '7.4'
+          - php-version: '7.4'
+            dependencies: 'lowest'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -42,11 +44,11 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install lowest dependencies
-        if: ${{ matrix.dependencies == 'lowest' }}
+        if: matrix.dependencies == 'lowest'
         run: composer update --prefer-lowest --no-interaction --no-progress
 
       - name: Install highest dependencies
-        if: ${{ matrix.dependencies == 'highest' }}
+        if: matrix.dependencies != 'lowest'
         run: composer update --no-interaction --no-progress
 
       - name: Run test suite
